add trie-library to store used paths

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Henrik Hautajärvi <henrik.hautajarvi@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pygtrie = "^2.4.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
